重构代码结构以提高可读性和可维护性

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,6 +18,7 @@
     --el-upload-dragger-bg-color: rgba(255, 255, 255, 0.6); /* el-upload-dragger背景 */
     --el-upload-dragger-border: 3px dashed #409EFF; /* el-upload-dragger边框 */
     --el-upload-dragger-hover-box-shadow: 0 0 10px 5px #409EFF; /* el-upload-dragger悬浮阴影 */
+    --el-upload-dragger-uniform-color: #409EFF; /* el-upload-dragger统一颜色 */
 
     --paste-card-textarea-border-color: #409EFF; /* 粘贴卡片文本框边框颜色 */
     --paste-card-textarea-box-shadow: 0 0 6px 1px #409EFF; /* 粘贴卡片文本框阴影 */
@@ -114,6 +115,9 @@
     --el-upload-dragger-bg-color: rgba(0, 0, 0, 0.6); /* el-upload-dragger背景 */
     --el-upload-dragger-border: 3px dashed #8fadc8; /* el-upload-dragger边框 */
     --el-upload-dragger-hover-box-shadow: 0 0 10px 5px #8fadc8; /* el-upload-dragger悬浮阴影 */
+    --el-upload-dragger-uniform-color: #8fadc8; /* el-upload-dragger统一颜色 */
+
+
     --paste-card-textarea-border-color: #8fadc8; /* 粘贴卡片文本框边框颜色 */
     --paste-card-textarea-box-shadow: 0 0 6px 1px #8fadc8; /* 粘贴卡片文本框阴影 */
 
